--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@react-keycloak/web": "^4.0.2",
-    "keycloak-js": "^24.0.0"
+    "keycloak-js": "^24.0.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
