--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.24.1",
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
