--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,6 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "@react-keycloak/web": "^3.4.0",
-    "keycloak-js": "^24.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
@@ -21,6 +19,8 @@
     "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "css-loader": "^6.10.0",
+    "style-loader": "^3.3.4"
   }
 }
